# agentic-job-agents

./: .env.example  .gitignore  README.md  alembic.ini  conftest.py  pyproject.toml
.ai/: 10-step-implementation-plan.md  ARCHITECTURE_V2.md  Job_AI_Application_Platform_Architecture.md  backend-agent-runtime-separation.md  observability-queries.sql  step1-detailed-plan.md  step9-step10-implementation-plan.md  step9-step10-test-matrix.md
alembic/: env.py
alembic/versions/: 20260305_0001_initial_schema.py  20260307_0002_durable_whatsapp_polling.py  20260310_0003_docx_first_attachment.py
data/: base_resume.docx  base_resume.md
scripts/: bootstrap_resume_docx_tracks.py  build_resume_tracks.py  evaluate_manager_relevance_live.py  evaluate_resume_editor_live.py  extract_relevance_review_set.py  run_system_validation_live.py  run_whatsapp_group_reply_preview_live.py
tests/integration/agent_runtime/: test_content_pipeline_integration.py  test_main_dry_run_integration.py  test_outbound_routing_integration.py  test_watcher_manager_integration.py
tests/integration/backend/: test_ingest_integration.py  test_main_runtime_integration.py  test_ops_api_integration.py  test_polling_catchup_integration.py
tests/integration/system/: test_gmail_live.py  test_manager_relevance_live.py  test_migrations.py  test_resume_editor_live.py  test_system_validation_integration.py  test_tracer_integration.py  test_waha_live.py  test_whatsapp_msg_live.py  test_whatsapp_text_live.py
tests/unit/agent_runtime/: test_ats_scorer.py  test_base_agent.py  test_convert_script.py  test_gmail_agent.py  test_main_dry_run.py  test_main_shutdown.py  test_manager_agent.py  test_pdf_converter_agent.py  (+5 more)
(+73 files in other folders)
